--- a/budget/budget.ui
+++ b/budget/budget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>632</width>
-    <height>211</height>
+    <width>730</width>
+    <height>273</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,7 +27,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPlainTextEdit" name="cText"/>
+         <widget class="QListView" name="cSelect"/>
         </item>
        </layout>
       </item>
@@ -89,7 +89,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>632</width>
+     <width>730</width>
      <height>24</height>
     </rect>
    </property>
