--- a/budget/budget.ui
+++ b/budget/budget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>730</width>
-    <height>273</height>
+    <height>307</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -100,6 +100,11 @@
           </item>
           <item>
            <property name="text">
+            <string>18</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
             <string>something</string>
            </property>
           </item>
@@ -158,7 +163,7 @@
      <x>0</x>
      <y>0</y>
      <width>730</width>
-     <height>24</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
