--- a/budget/login.ui
+++ b/budget/login.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>468</width>
-    <height>278</height>
+    <height>282</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,10 @@
       </font>
      </property>
      <property name="text">
-      <string>Connect with SQL Server Authentication</string>
+      <string>Log into database</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -50,6 +53,9 @@
            <pointsize>18</pointsize>
           </font>
          </property>
+         <property name="inputMethodHints">
+          <set>Qt::ImhNone</set>
+         </property>
          <property name="tabChangesFocus">
           <bool>true</bool>
          </property>
@@ -73,6 +79,9 @@
           <font>
            <pointsize>18</pointsize>
           </font>
+         </property>
+         <property name="inputMethodHints">
+          <set>Qt::ImhSensitiveData</set>
          </property>
          <property name="tabChangesFocus">
           <bool>true</bool>
