Finished login screen. Started work on main dashboard

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -7,5 +7,6 @@
         <file>design/settings_white.png</file>
         <file>design/user_icon.png</file>
         <file>design/user_icon_colored.png</file>
+        <file>dashboard.qml</file>
     </qresource>
 </RCC>
