Started working on date select and summary
QT giving problems with moving buttons to own component
MacOs SDK may be problem

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -11,5 +11,6 @@
         <file>design/analytics.png</file>
         <file>design/dash.png</file>
         <file>design/transaction.png</file>
+        <file>components/dateButton.qml</file>
     </qresource>
 </RCC>
