Created a tab for the recurring transactions

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -12,5 +12,6 @@
         <file>design/dash.png</file>
         <file>design/transaction.png</file>
         <file>transactions.qml</file>
+        <file>recurring_trs.qml</file>
     </qresource>
 </RCC>
