Started moving left tab to it's own component
Made iconButtons into their own component

To do:
	Need to organize files into proper folders
	Need to find a way to pass which page the user is currently on
		Affects icon background

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -14,5 +14,7 @@
         <file>transactions.qml</file>
         <file>recurring_trs.qml</file>
         <file>TrsInputField.qml</file>
+        <file>LeftTab.qml</file>
+        <file>LeftTabButton.qml</file>
     </qresource>
 </RCC>
