Moved transaction bar to it's own component
Keeping income and expense toggles as their own things

Will move input fields to a columnlayout

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -16,5 +16,6 @@
         <file>TrsInputField.qml</file>
         <file>LeftTab.qml</file>
         <file>LeftTabButton.qml</file>
+        <file>TrsBar.qml</file>
     </qresource>
 </RCC>
