Moved transaction table to it's own component
Will need to look at rendering headers with the table, instead of as seperate elements.

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -18,5 +18,6 @@
         <file>LeftTabButton.qml</file>
         <file>TrsBar.qml</file>
         <file>TopBarButton.qml</file>
+        <file>TrsTable.qml</file>
     </qresource>
 </RCC>
