Moved headers to own component

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -19,5 +19,6 @@
         <file>TrsBar.qml</file>
         <file>TopBarButton.qml</file>
         <file>TrsTable.qml</file>
+        <file>TableHeader.qml</file>
     </qresource>
 </RCC>
