Created a component that holds the general layout of each subpage in transactions
This template is used in creating both normal and recurring transactions
	Should also be easy to use for categories

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -20,5 +20,6 @@
         <file>TopBarButton.qml</file>
         <file>TrsTable.qml</file>
         <file>TableHeader.qml</file>
+        <file>TransactionsTemplate.qml</file>
     </qresource>
 </RCC>
