Started work on categories tab
Using trs template for now. Might need to make some changes to allow for better flexibility.

Also still need to make trs stuff scalable.

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -23,5 +23,6 @@
         <file>pages/shared/LeftTabButton.qml</file>
         <file>Styling.qml</file>
         <file>qmldir</file>
+        <file>pages/transactions/categories.qml</file>
     </qresource>
 </RCC>
